tests/gpu_struct/compile-fail/nested_without_gpu_nested.rs
use prgpu::gpu_struct;

pub struct Custom {
    pub x: f32,
}

#[gpu_struct]
pub struct WithoutGpuNested {
    pub inner: Custom,
}

fn main() {}
